refactor(webpack client build): Upgraded package extract-css-chunks-webpack-plugin to 3.3.3.

--- a/client/assets/scss/app/app.scss
+++ b/client/assets/scss/app/app.scss
@@ -155,31 +155,31 @@ hr.light {
 
 .container-padding-border-radius-1 {
   padding: calculate-rem(10px);
-  border: calculate-rem(1px) solid #d8dee2;
+  border: calculate-rem(1px) solid #009900;
   border-radius: calculate-rem(3px);
 }
 
 .container-padding-border-radius-2 {
   padding: calculate-rem(10px);
-  border: calculate-rem(2px) solid #d8dee2;
+  border: calculate-rem(2px) solid #009900;
   border-radius: calculate-rem(3px);
 }
 
 .container-padding-border-radius-3 {
   padding: calculate-rem(10px);
-  border: calculate-rem(4px) solid #d8dee2;
+  border: calculate-rem(4px) solid #009900;
   border-radius: calculate-rem(3px);
 }
 
 .container-padding-10-border-1-radius-2 {
   padding: calculate-rem(10px);
-  border: calculate-rem(1px) solid #d8dee2;
+  border: calculate-rem(1px) solid #009900;
   border-radius: calculate-rem(2px);
 }
 
 .container-padding-5-border-1-radius-1 {
   padding: calculate-rem(5px);
-  border: calculate-rem(1px) solid #d8dee2;
+  border: calculate-rem(1px) solid #009900;
   border-radius: calculate-rem(1px);
 }
 
