feat(CatsForm CatInputs): Modified components CatsForm and CatInputs state is lifted for CatInputs.

--- a/client/assets/scss/app/app.scss
+++ b/client/assets/scss/app/app.scss
@@ -153,8 +153,8 @@ hr.light {
   display: flex;
 }
 
-.basic-border-black-1 {
-  border: calculate-rem(1px) solid #000000;
+.basic-border-goldenrod-1 {
+  border: calculate-rem(1px) solid #DAA520;
   border-radius: calculate-rem(3px);
 }
 
